--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
-  - title: "Data Anayltics"
-    url: /data_analytics/
+  - title: "Data Analytics"
+    url: /data analytics/
   - title: "Photography"
     url: /photography/
   - title: "Finance"
-    url: /financial_independence/
+    url: /financial independence/
   - title: "Dating"
     url: /dating/
   - title: "Random"
