Upload Digit Recogniser post

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
   - title: "Data Analytics"
-    url: /data analytics/
+    url: /DA/
   - title: "Photography"
     url: /photography/
   - title: "Finance"
-    url: /financial independence/
+    url: /finance/
   - title: "Dating"
     url: /dating/
   - title: "Random"
