--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,10 @@
 # main links
 main:
-  - title: "Data Analytics"
+  - title: "Smarty"
     url: /DA/
   - title: "Photography"
     url: /photography/
   - title: "Finance"
     url: /finance/
-  - title: "Dating"
-    url: /dating/
-  - title: "Random"
-    url: /random/
+  - title: "Fun"
+    url: /fun/
