Remove photography and add herokuapp

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   - title: "Smarty"
     url: /DA/
-  - title: "Webdev"
-    url: /Web/
-  - title: "Photography"
-    url: /photography/
+  - title: "Heroku"
+    url: https://doraemonz.herokuapp.com/
+  #- title: "Photography"
+  #  url: /photography/
   - title: "Finance"
     url: /finance/
   - title: "Fun"
