--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Smarty"
-    url: /DA/
+  - title: "Coding"
+    url: /Coding/
   - title: "Heroku"
     url: https://doraemonz.herokuapp.com/
   #- title: "Photography"
