--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,15 @@
 main:
   - title: "Coding"
     url: /Coding/
+  #- title: "Photography"
+  #  url: /Photography/
+  - title: "Finance"
+    url: /Finance/
+  - title: "Fun"
+    url: /Fun/
   - title: "Heroku"
     url: https://doraemonz.herokuapp.com/
-  #- title: "Photography"
-  #  url: /photography/
-  - title: "Finance"
-    url: /finance/
-  - title: "Fun"
-    url: /fun/
   - title: "Search"
-    url: /search/
+    url: /Search/
+  - title: "Terms & Privacy Policy"
+    url: /TP/
