Change theme to neon

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Doraemon"
 title_separator          : "-"
 name                     : "Le Tang"
 description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://keelezibel.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/doraemon.png"
@@ -49,7 +49,7 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.
 
-remote_theme             : benbalter/retlab
+remote_theme             : mmistakes/minimal-mistakes
 
 # SEO Related
 google_site_verification :
@@ -189,6 +189,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-remote-theme
 
 # mimic GitHub Pages with --safe
 whitelist:
