add gem remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Doraemon"
 title_separator          : "-"
 name                     : "Le Tang"
 description              : "An amazing website."
-url                      : "https://keelezibel.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/doraemon.png"
