remove _pages search.html

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /fun/
   - title: "Heroku"
     url: https://doraemonz.herokuapp.com/
-  - title: "Search"
-    url: /search/
+  #- title: "Search"
+  #  url: /search/
   - title: "Terms & Privacy Policy"
     url: /TP/
