--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@
 # This file should be at the root of your project
 language: ruby
 cache: bundler
+gemfile: Gemfile
 before_install:
   - gem install bundler
 script:
-  - bundle exec jekyll algolia
+  - bundle exec jekyll algolia --source docs --destination docs/_site --config docs/_config.yml
 branches:
   only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
