--- a/_config.yml
+++ b/_config.yml
@@ -51,11 +51,11 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : algolia # lunr (default), algolia, google
+search_provider          : # lunr (default), algolia, google
 algolia:
-  application_id         : OJGSQ0UGQX # YOUR_APPLICATION_ID
-  index_name             : "dev_keelezibel" # YOUR_INDEX_NAME
-  search_only_api_key    : 1bfdaf2f5c24f0b77bc7229631335892 # YOUR_SEARCH_ONLY_API_KEY
+  application_id         : #OJGSQ0UGQX # YOUR_APPLICATION_ID
+  index_name             : #"dev_keelezibel" # YOUR_INDEX_NAME
+  search_only_api_key    : #1bfdaf2f5c24f0b77bc7229631335892 # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
