--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url                      : # the base hostname & protocol for your site e.g. "ht
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/doraemon.png"
-breadcrumbs              : # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 500
 comments:
   provider               : "disqus"
